--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@hookform/resolvers": "^3.9.1",
     "date-fns": "^4.1.0",
     "immer": "^10.1.1",
@@ -18,14 +19,14 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-router-dom": "^7.0.2",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
+    "stylis": "^4.3.5",
     "zod": "^3.24.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
